<resources>
    <string name="create">Create</string>
    <string name="create_new_game">Create New Game</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="explore_games">Explore Games</string>
    <string name="first_name">First Name</string>
    <string name="game_duration_hours">Game Duration (Hours)</string>
    <string name="game_duration_placeholder">Enter Game Duration</string>
    <string name="game_room_name">Game Room Name</string>
    <string name="game_room_name_placeholder">Enter Game Room Name</string>
    <string name="greeting_personalized">Hi,\n%1$s</string>
    <string name="home">Home</string>
    <string name="invite_friends_to_this_game">Invite Friends to This Game</string>
    <string name="images">Images</string>
    <string name="join_game">Join Game</string>
    <string name="last_name">Last Name</string>
    <string name="login_cancelled_message">Please login to use Paparazzi</string>
    <string name="login_success_message">Successfully logged in via Facebook!</string>
    <string name="login_error_message">Something went wrong, please try again in a few minutes</string>
    <string name="maximum_players">Maximum Players</string>
    <string name="maximum_players_placeholder">Enter Maximum Players</string>
    <string name="my_games">My Games</string>
    <string name="nearby_games">Nearby Games</string>
    <string name="new_game">New Game</string>
    <string name="no_images">No Images</string>
    <string name="players">Players</string>
    <string name="please_enter_valid_values">Please enter valid values!</string>
    <string name="rate">Rate</string>
    <string name="rate_image_title">Rate this image!</string>
    <string name="send_message_error">There was an issue sending your message, please try again.</string>
    <string name="start_game">Start Game</string>
    <string name="start_game_error">There was an issue starting your game, please try again.</string>
    <string name="start_game_success">Your game has successfully started!</string>
    <string name="start_game_success_name">%1$s has successfully started!</string>
    <string name="settings">Settings</string>
    <string name="the_winner_is">The winner is %1$s!</string>
    <string name="use_the_following_game_room_name">Use the following game room name:</string>
    <string name="you_are_the_paparazzi">You are the paparazzi now!</string>
    <string name="your_rating">Your rating!</string>
    <string name="your_target_is_name">Your target is %1$s!</string>
</resources>
