<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    >

    <TextView
        android:id="@+id/game_info_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/players"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="16sp"
                />

            <ListView
                android:id="@+id/game_info_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/images"
                android:textAlignment="center"
                android:textColor="@color/darkGray"
                android:textSize="16sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <GridView
                    android:id="@+id/game_info_pictures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnWidth="80dp"
                    android:numColumns="auto_fit"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/no_images"
                    android:textAlignment="center"
                    android:textColor="@color/darkGray"
                    android:visibility="gone"
                    />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>